tests/negative/Test13.sp
(* Testing arrays *)
get_array()(i+1);
